# SimpleQtVoiceChatServer

./: CMakeLists.txt  main.cpp  voiceserver.cpp  voiceserver.h
